objects/PrOrderItem__c.object
<CustomObject>
    <fields>
        <fullName>ItemNumber__c</fullName>
        <label>ItemNumber</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderAmount__c</fullName>
        <label>OrderAmount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Qty__c</fullName>
        <label>Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>orderId__c</fullName>
        <label>orderId</label>
        <referenceTo>PrOrder__c</referenceTo>
        <relationshipLabel>PrOrderItems</relationshipLabel>
        <relationshipName>PrOrderItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>PrOrderItem</label>
    <nameField>
        <label>PrOrderItems Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PrOrderItems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>